--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "GitHub Clone with VS Code",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Adds an 'Open with VS Code' button to GitHub repositories for direct cloning",
   "icons": {
     "16": "icons/icon16.png",
@@ -21,6 +21,5 @@
       "js": ["content.js"]
     }
   ],
-  "permissions": [],
-  "host_permissions": ["*://github.com/*/*"]
+  "permissions": []
 }
